Fix #29 - Blurry icon in menu panel

--- a/src/chrome/skin/copyurlsexpert.css
+++ b/src/chrome/skin/copyurlsexpert.css
@@ -2,7 +2,8 @@
   list-style-image: url(chrome://copy-urls-expert/skin/cue-icon16.png);
 }
 
-/* Inside customization panel, use a 32x32 image (FF 29+)*/
-.customization-palette #copyurlsexpert-toolbar-btnmain {
+/* Inside customization panel and panel-UI, use a 32x32 image (FF 29+)*/
+.customization-palette #copyurlsexpert-toolbar-btnmain,
+#copyurlsexpert-toolbar-btnmain[cui-areatype=menu-panel] {
   list-style-image: url(chrome://copy-urls-expert/skin/cue-icon.png);
 }
